--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -20,7 +20,7 @@
     "open": "clasp open",
     "dts": "run-s dts:*",
     "dts:generate": "clasp-dts && copyfiles README.md dts/lib",
-    "dts:publish": "yarn --cwd dts/ publish --new-version $npm_package_version",
+    "dts:publish": "yarn --cwd dts/ publish --access public --new-version $npm_package_version",
     "test": "run-s test:*",
     "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
