--- a/types/package.json
+++ b/types/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bkper/bkper-app-dts",
-  "version": "1.0.5",
+  "name": "@bkper/bkper-app-types",
+  "version": "0.0.1",
   "description": "Typescript definitions for BkperApp",
   "homepage": "https://bkper.com/api",
   "repository": {
