--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -18,7 +18,6 @@
   "scripts": {
     "clean": "rimraf build",
     "open": "clasp open",
-    "types": "run-s types:*",
     "types:generate": "clasp-types && copyfiles README.md types/lib",
     "types:publish": "yarn --cwd types/ publish --access public --new-version $npm_package_version",
     "test": "run-s test:*",
@@ -26,7 +25,7 @@
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
     "push": "clasp push",
     "preversion": "run-s test push",
-    "postversion": "yarn types && git push && git push --tags && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "git push && git push --tags && yarn types:generate && types:publish && echo \"Successfully released version $npm_package_version!\""
   },
   "devDependencies": {
     "@google/clasp": "^2.2.1",
