--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -32,6 +32,7 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "clasp-types": "^1.0.1",
     "copyfiles": "^2.1.1",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
