--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -25,14 +25,13 @@
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
     "push": "clasp push",
     "preversion": "run-s test push",
-    "postversion": "git push && git push --tags && yarn types:generate && types:publish && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "git push && git push --tags && yarn types:generate && yarn types:publish && echo \"Successfully released version $npm_package_version!\""
   },
   "devDependencies": {
     "@google/clasp": "^2.2.1",
     "@types/chai": "^4.2.0",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "clasp-types": "^1.0.2",
     "copyfiles": "^2.1.1",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
@@ -42,7 +41,8 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "@types/google-apps-script": "^0.0.59"
+    "@types/google-apps-script": "^0.0.59",
+    "clasp-types": "^1.0.3"
   },
   "keywords": [
     "google",
