Updating readme and scripts

--- a/types/package.json
+++ b/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app-types",
-  "version": "0.0.0",
+  "version": "0.0.6",
   "description": "Typescript definitions for BkperApp",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -32,5 +32,6 @@
     "accounting",
     "bookkeeping"
   ],
+  "license": "MIT",
   "types": "./index.d.ts"
 }
