--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "clasp-types": "^1.0.3",
     "copyfiles": "^2.1.1",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
@@ -41,8 +42,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "@types/google-apps-script": "^0.0.59",
-    "clasp-types": "^1.0.3"
+    "@types/google-apps-script": "^0.0.59"
   },
   "keywords": [
     "google",
