--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -19,7 +19,7 @@
     "clean": "rimraf build",
     "open": "clasp open",
     "types:generate": "yarn clasp-types",
-    "types:publish": "yarn --cwd types/ publish --access public --new-version $npm_package_version",
+    "types:publish": "yarn --cwd dist/@bkper/bkper-app-types publish --access public --new-version $npm_package_version",
     "test": "run-s test:*",
     "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
@@ -32,7 +32,7 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "clasp-types": "^1.0.3",
+    "clasp-types": "^1.1.0",
     "copyfiles": "^2.1.1",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
