--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@google/clasp": "^2.3.0",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.5",
     "chai": "^4.2.0",
     "clasp-types": "^1.1.4",
     "copyfiles": "^2.1.1",
