--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
     "push": "clasp push",
+    "watch": "yarn push --watch",
     "preversion": "run-s test push",
     "postversion": "yarn types:generate && yarn types:publish && git push && git push --tags && echo \"Successfully released version $npm_package_version!\""
   },
