--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
   "repository": {
@@ -20,14 +20,14 @@
     "open": "clasp open",
     "build": "yarn test",
     "types:generate": "yarn clasp-types",
-    "types:publish": "yarn --cwd dist/@bkper/bkper-app-types publish --access public --new-version $npm_package_version",
+    "types:publish": "yarn --cwd dist/@bkper/bkper-app-types publish --access public",
     "test": "run-s test:*",
     "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
     "push": "clasp push",
     "watch": "yarn push --watch",
     "preversion": "run-s test push",
-    "postversion": "yarn types:generate && yarn types:publish && git push && git push --tags && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "clasp version $npm_package_version && git push && git push --tags && echo \"Successfully released version $npm_package_version!\""
   },
   "devDependencies": {
     "@google/clasp": "^2.3.0",
