--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bkper/bkper-app",
   "version": "1.6.4",
   "description": "Google Apps Script library for Bkper",
-  "homepage": "https://bkper.com/api",
+  "homepage": "https://bkper.com/docs/#bkperapp",
   "repository": {
     "type": "git",
     "url": "https://github.com/bkper/bkper-app.git"
