Explicitly defining oauth scopes on manifest

--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -1,5 +1,9 @@
 {
   "timeZone": "Etc/GMT",
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/script.external_request",
+    "https://www.googleapis.com/auth/userinfo.email"
+  ]
 }
