--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "minor": "yarn version --minor",
     "major": "yarn version --major",
     "preversion": "run-s build push",
-    "postversion": "clasp version $npm_package_version && git push && git push --tags",
+    "postversion": "clasp version $npm_package_version && git push && git push --tags && echo \"Successfully released version $npm_package_version!\"",
     "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
