--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
+    "@bkper/http-request-app-types": "^1.0.8",
     "@google/clasp": "^2.3.0",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
