--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "1.11.0",
+  "version": "3.0.0",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/docs/#bkperapp",
   "repository": {
@@ -29,24 +29,30 @@
     "patch": "yarn version --patch",
     "minor": "yarn version --minor",
     "major": "yarn version --major",
+    "api": "dtsgen -o @types/bkper-api-v3/index.d.ts",
+    "api:prod": "yarn run api --url https://app.bkper.com/openapi.json",
+    "api:dev": "yarn run api  --url https://dev.bkper.com/openapi.json",
+    "api:local": "yarn run api  --url http://localhost:8081/openapi.json",
     "preversion": "run-s build push",
     "postversion": "clasp version $npm_package_version && git push && git push --tags && echo \"Successfully released version $npm_package_version!\"",
     "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
     "@bkper/http-request-app-types": "^1.0.8",
+    "@dtsgenerator/replace-namespace": "^1.3.2",
     "@google/clasp": "^2.3.0",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "chai": "^4.2.0",
-    "clasp-types": "^1.1.8",
+    "clasp-types": "^1.3.0",
     "copyfiles": "^2.1.1",
+    "dtsgenerator": "^3.2.0",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
-    "typedoc": "^0.17.4",
+    "typedoc": "^0.17.8",
     "watch": "^1.0.2"
   },
   "dependencies": {
