--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkper/bkper-app",
-  "version": "3.0.0",
+  "version": "2.0.0",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/docs/#bkperapp",
   "repository": {
@@ -38,6 +38,7 @@
     "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
+    "@bkper/bkper-api-types": "^3.0.0",
     "@bkper/http-request-app-types": "^1.0.8",
     "@dtsgenerator/replace-namespace": "^1.3.2",
     "@google/clasp": "^2.3.0",
@@ -45,7 +46,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "chai": "^4.2.0",
-    "clasp-types": "^1.3.0",
+    "clasp-types": "^1.3.1",
     "copyfiles": "^2.1.1",
     "dtsgenerator": "^3.2.0",
     "mocha": "^6.2.0",
