--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "major": "yarn version --major",
     "upgrade:api": "yarn upgrade @bkper/bkper-api-types --latest",
     "preversion": "run-s build push",
-    "postversion": "clasp version $npm_package_version && git push && git push --tags && echo \"Successfully released version $npm_package_version!\"",
+    "postversion": "git push && git push --tags && clasp version $npm_package_version && echo \"Successfully released version $npm_package_version!\"",
     "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
