--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@bkper/bkper-app",
+  "name": "@bkper/bkper-gs",
   "version": "3.34.3",
   "description": "Google Apps Script library for Bkper",
-  "homepage": "https://bkper.com/docs/#bkperapp",
+  "homepage": "https://bkper.com/docs/bkper-gs/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bkper/bkper-app.git"
+    "url": "https://github.com/bkper/bkper-gs.git"
   },
   "bugs": {
-    "url": "https://github.com/bkper/bkper-app/issues",
+    "url": "https://github.com/bkper/bkper-gs/issues",
     "email": "support@bkper.com"
   },
   "author": {
@@ -36,7 +36,7 @@
     "upgrade:api": "yarn upgrade @bkper/bkper-api-types --latest",
     "preversion": "run-s build push",
     "postversion": "git push && git push --tags && clasp version $npm_package_version && echo \"Successfully released version $npm_package_version!\"",
-    "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-app-types publish --new-version $npm_package_version --access public"
+    "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-gs-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
     "@bkper/bkper-api-types": "^5.9.0",
