--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "clasp:login": "clasp login && yarn clasp:store",
+    "clasp:login": "clasp login && bun clasp:store",
     "clasp:store": "cp ~/.clasprc.json ~/.clasprc-bkper.json",
     "clasp:activate": "cp ~/.clasprc-bkper.json ~/.clasprc.json",
     "clean": "rimraf build",
     "open": "clasp open",
-    "prepush": "yarn clasp:activate",
+    "prepush": "bun clasp:activate",
     "push": "clasp push",
-    "watch": "yarn push --watch",
+    "dev": "bun push --watch",
     "test": "run-s test:*",
     "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "test:run": "mocha --require source-map-support/register build/test-bundle.js",
-    "build": "yarn && run-s clean test build:*",
+    "build": "bun install && run-s clean test build:*",
     "build:types": "yarn clasp-types",
     "patch": "yarn version --patch",
     "minor": "yarn version --minor",
     "major": "yarn version --major",
-    "upgrade:api": "yarn upgrade @bkper/bkper-api-types --latest",
+    "upgrade:api": "bun update @bkper/bkper-api-types --latest",
     "preversion": "run-s build push",
     "postversion": "git push && git push --tags && clasp version $npm_package_version && echo \"Successfully released version $npm_package_version!\"",
-    "publish:types": "yarn build && yarn --cwd dist/@bkper/bkper-gs-types publish --new-version $npm_package_version --access public"
+    "publish:types": "bun run build && yarn --cwd dist/@bkper/bkper-gs-types publish --new-version $npm_package_version --access public"
   },
   "devDependencies": {
     "@bkper/bkper-api-types": "^5.9.0",
     "@bkper/http-request-app-types": "^1.0.8",
     "@dtsgenerator/replace-namespace": "^1.3.2",
-    "@google/clasp": "^2.3.0",
+    "@google/clasp": "^2.4.2",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
